--- a/app/src/main/res/layout/activity_leder_slut_moede.xml
+++ b/app/src/main/res/layout/activity_leder_slut_moede.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="#DFE0E0"
-    tools:context=".Mødeleder.LederSlutMoedeActivity">
+    tools:context=".Mødeleder.LogIn">
 
     <Chronometer
         android:id="@+id/chronometer"
