--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,12 @@
             android:layout_height="wrap_content"
             android:text="@string/fremskridt6" />
 
+        <android.support.design.widget.TabItem
+            android:id="@+id/tabItem7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/fremskridt7" />
+
     </android.support.design.widget.TabLayout>
 
 </android.support.design.widget.AppBarLayout>
