--- a/app/src/main/res/layout/activity_tab7.xml
+++ b/app/src/main/res/layout/activity_tab7.xml
@@ -99,6 +99,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:ems="10"
+            android:hint="Tilføj kommentar"
             android:inputType="textMultiLine"
             android:singleLine="false"
             android:textAlignment="textStart"
