--- a/app/src/main/res/layout/activity_highscore.xml
+++ b/app/src/main/res/layout/activity_highscore.xml
@@ -162,5 +162,13 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.226" />
 
+    <Button
+        android:id="@+id/SeStat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Statistik"
+        tools:layout_editor_absoluteX="261dp"
+        tools:layout_editor_absoluteY="446dp" />
+
 
 </android.support.constraint.ConstraintLayout>
