--- a/app/src/main/res/layout/activity_leder_opret_moede.xml
+++ b/app/src/main/res/layout/activity_leder_opret_moede.xml
@@ -9,12 +9,12 @@
     tools:layout_editor_absoluteY="81dp">
 
     <EditText
-        android:id="@+id/mailEdit"
+        android:id="@+id/emailEditText"
         android:layout_width="wrap_content"
         android:layout_height="41dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="32dp"
         android:ems="10"
         android:hint="Indtast mail"
         android:inputType="textPersonName"
