--- a/app/src/main/res/layout/activity_deltager_dagsorden.xml
+++ b/app/src/main/res/layout/activity_deltager_dagsorden.xml
@@ -39,22 +39,18 @@
         android:layout_height="wrap_content"
         android:text="TextView" />
 
-    <ScrollView
-        android:id="@+id/scrollView2"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteY="731dp"/>
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteY="731dp">
 
+        </androidx.recyclerview.widget.RecyclerView>
 
         <Button
             android:id="@+id/feedbackBtn"
@@ -66,7 +62,7 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/knap_baggrund"
             android:text="Start feedback"
-            android:textColor="@android:color/background_light"/>
-    </ScrollView>
+            android:textColor="@android:color/background_light" />
+    </LinearLayout>
 
 </LinearLayout>
