to ekstra tab og opdatering af firebase

--- a/app/src/main/res/layout/activity_tab8.xml
+++ b/app/src/main/res/layout/activity_tab8.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent">
 
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="0dp"
+        android:layout_height="98dp"
+        android:layout_marginBottom="44dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
