--- a/app/src/main/res/layout/activity_leder_slut_moede.xml
+++ b/app/src/main/res/layout/activity_leder_slut_moede.xml
@@ -7,6 +7,25 @@ android:layout_height="match_parent"
 android:background="#DFE0E0"
     tools:context=".Mødeleder.LogIn">
 
+    <Button
+        android:id="@+id/seKommentar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/knap_baggrund"
+        android:text="Se Kommentar"
+        android:textColor="#FFFFFF"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.557" />
+
     <Chronometer
         android:id="@+id/chronometer"
         android:layout_width="wrap_content"
