--- a/app/src/main/res/layout/activity_tab8.xml
+++ b/app/src/main/res/layout/activity_tab8.xml
@@ -6,15 +6,23 @@
     android:layout_height="match_parent">
 
 
+
     <Button
         android:id="@+id/button3"
-        android:layout_width="0dp"
-        android:layout_height="98dp"
-        android:layout_marginBottom="44dp"
-        android:text="Button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/knap_baggrund"
+        android:text="Videre"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.917" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
