--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#8d9a92</color>
+    <color name="colorPrimary">#8D9A92</color>
     <color name="colorPrimaryDark">#2C3730</color>
     <color name="colorAccent">#294239</color>
 </resources>
