--- a/app/src/main/res/layout/tab_activity.xml
+++ b/app/src/main/res/layout/tab_activity.xml
@@ -75,6 +75,8 @@
         android:layout_height="100dp"
         android:layout_marginBottom="8dp"
         android:background="@color/colorPrimary"
+        android:paddingTop="15dp"
+        android:paddingBottom="10dp"
         android:textAlignment="center"
         android:textColor="@android:color/black"
         android:textSize="24sp"
