--- a/app/src/main/res/layout/activity_dagsorden.xml
+++ b/app/src/main/res/layout/activity_dagsorden.xml
@@ -3,9 +3,9 @@
     android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DFE0E0"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="#DFE0E0"
     tools:context=".DagsordenLogik.Dagsorden">
 
     <ScrollView
@@ -13,9 +13,21 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:text="Opret dagsorden"
+                android:textAlignment="center"
+                android:textColor="@android:color/background_light"
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/navnMøde"
@@ -50,8 +62,7 @@
                 android:text="Opret mødepunkter nedenfor"
                 android:textAlignment="center"
                 android:textColor="@android:color/background_light"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/etOverskrift"
@@ -72,7 +83,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="325dp"
-                android:background="@drawable/add_btn"
+                android:background="@drawable/addtryk"
                 android:textColor="@android:color/background_light" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -80,8 +91,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@android:color/background_light"
-                android:scrollbars="vertical">
+                android:background="#DFE0E0"
+                android:scrollbars="vertical|none">
 
             </androidx.recyclerview.widget.RecyclerView>
 
