--- a/app/src/main/res/layout/activity_leder_slut_moede.xml
+++ b/app/src/main/res/layout/activity_leder_slut_moede.xml
@@ -14,7 +14,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/knap_baggrund"
-        android:text="Se Kommentar"
+        android:fontFamily="sans-serif"
+        android:text="Se Kommentare"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,6 +32,7 @@
         android:layout_marginTop="64dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/knap_baggrund"
+        android:fontFamily="sans-serif"
         android:text="Start møde"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
