--- a/app/src/main/res/layout/activity_dagsorden.xml
+++ b/app/src/main/res/layout/activity_dagsorden.xml
@@ -100,8 +100,9 @@
 
             <Button
                 android:id="@+id/btnOpret"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="90dp"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/knap_baggrund"
                 android:text="Opret dagsorden"
