--- a/app/src/main/res/layout/activity_deltager_dagsorden.xml
+++ b/app/src/main/res/layout/activity_deltager_dagsorden.xml
@@ -69,6 +69,7 @@
             android:layout_marginLeft="80dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/knap_baggrund"
+            android:fontFamily="sans-serif"
             android:text="Start feedback"
             android:textAlignment="center"
             android:textColor="@android:color/background_light" />
