--- a/app/src/main/res/layout/activity_kommentar.xml
+++ b/app/src/main/res/layout/activity_kommentar.xml
@@ -18,6 +18,8 @@
         android:paddingTop="15dp"
         android:text="TextView"
         android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@android:color/background_light"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/listview"
         app:layout_constraintEnd_toEndOf="parent"
