--- a/app/src/main/res/layout/activity_tab8.xml
+++ b/app/src/main/res/layout/activity_tab8.xml
@@ -6,17 +6,18 @@
     android:layout_height="match_parent">
 
 
-
     <Button
         android:id="@+id/button3"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@drawable/knap_baggrund"
+        android:fontFamily="sans-serif"
         android:text="Videre"
+        android:textAlignment="center"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
